--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "postcss-inline-media": "^1.3.0",
     "postcss-nested": "^4.1.2",
     "postcss-simple-vars": "^5.0.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-accessible-accordion": "^3.0.0",
+    "react-collapsible": "^2.6.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-responsive-accordion": "^1.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
