--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-responsive-accordion": "^1.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-slick": "^0.24.0",
+    "react-yandex-maps": "^4.0.1"
   },
   "scripts": {
     "css:watch": "postcss src/styles/index.css -o src/index.css -w",
