--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "css-mqpacker": "^7.0.0",
+    "jquery": "^3.4.1",
     "page": "^1.11.4",
     "postcss-cli": "^6.1.3",
     "postcss-import": "^12.0.1",
