--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,4 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . /index.html [L]
-RewriteCond %{HTTP_HOST} ^fields\.moscow$ [OR]
-RewriteCond %{HTTP_HOST} ^www\.fields\.moscow$
-RewriteRule ^/?$ "http\:\/\/fields\.moscow\/index\.html" [R=301,L]
+RewriteCond %{REQUEST_URI} !^/admin/
