--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "fields2019",
   "version": "0.1.0",
-  "private": true,
+  "homepage": ".",
   "dependencies": {
     "classnames": "^2.2.6",
     "css-mqpacker": "^7.0.0",
+    "fetch-retry": "^2.2.2",
     "jquery": "^3.4.1",
     "page": "^1.11.4",
     "postcss-cli": "^6.1.3",
@@ -23,12 +24,13 @@
     "react-responsive-accordion": "^1.0.0",
     "react-scripts": "3.0.1",
     "react-slick": "^0.24.0",
-    "react-yandex-maps": "^4.0.1"
+    "react-yandex-maps": "^4.0.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "css:watch": "postcss src/styles/index.css -o src/index.css -w",
     "css:build": "postcss src/styles/index.css -o src/index.css",
-    "start": "yarn 'css:watch' & react-scripts start",
+    "start": "sleep 1 && yarn 'css:watch' & react-scripts start",
     "build": "yarn 'css:build' && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
